--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="space-y-6">
-        <h1 class="text-3xl font-bold text-gray-900">Posts</h1>
+        <h1 class="text-3xl font-bold text-gray-900">Welcome to Posts</h1>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             {% for post in posts %}
